fix: add defensive checks when parsing template plugin code (#261)